Closed Bug 1008573 Opened 12 years ago Closed 12 years ago

Text rendering Issues when scrolling

Categories

(Core :: Graphics, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla32
Tracking Status
firefox31 --- verified
firefox32 --- verified

People

(Reporter: xtc4uall, Assigned: mattwoodrow)

References

Details

(Keywords: regression, testcase)

Attachments

(3 files, 1 obsolete file)

Noticed rendering Issues when scrolling Bugzilla's CC Box and even in this Comment's box, i.e. parts of text geting bold. Does get invalidated by moving mouse cursor/when changing focus. STR: * see Testcase/Screenshot * scroll up/down It's a recent Regression: Last good nightly: 2014-05-08 First bad nightly: 2014-05-09 Pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=2a03b34c8953&tochange=cf89b5d018f8 and further https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=d002d113feca&tochange=d1155f994a3a https://tbpl.mozilla.org/?tree=Mozilla-Inbound&fromchange=d002d113feca&tochange=d1155f994a3a => Bug 945079/Bug 938395 Still happens with https://hg.mozilla.org/integration/mozilla-inbound/rev/120d830b89e2 Btw, does not happen with OMTC enabled and does not happen with HWA disabled. I repro'd this with an Optimus Notebook and a Desktop with AMD HD 4850.
Attached image bug_screenshot_1.png
I could also reproduce this on a desktop-nVidia 640 (335.23) when scrolling down, but not when scrolling up.
Also very visible when scrolling a bugzilla CC list.
In local build: Last Good: a929ed3a2330 First Bad: d1155f994a3a Regressed by d1155f994a3a Matt Woodrow — Bug 938395 - Enable single rect painting for d3d10. r=Bas
No longer blocks: 945079
Oops.
Attachment #8420718 - Flags: review?(bas)
I would move that one if lower and you probably didn't mean to change the pref.
(In reply to Andreas Gal :gal from comment #6) > I would move that one if lower and you probably didn't mean to change the > pref. All of these things are true.
Assignee: nobody → matt.woodrow
Attachment #8420718 - Attachment is obsolete: true
Attachment #8420718 - Flags: review?(bas)
Attachment #8420719 - Flags: review?(bas)
Attachment #8420719 - Flags: review?(bas) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
Comment on attachment 8420719 [details] [diff] [review] Simplify before we clear the texture [Approval Request Comment] Bug caused by (feature/regressing bug #): Bug 938395 User impact if declined: Broken scrolling for some pages Testing completed (on m-c, etc.): Been on m-c for a few weeks Risk to taking this patch (and alternatives if risky): Very low risk, fixes a known bug on something we just uplifted. String or IDL/UUID changes made by this patch: None
Attachment #8420719 - Flags: approval-mozilla-aurora?
Attachment #8420719 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Keywords: verifyme
Reproduced in Nightly 2014-05-09. Verified fixed using the testcase and the cc list in bugzilla on 32.0a1 (2014-06-05), 31.0a2 (2014-06-05) Win 7 x64.
Status: RESOLVED → VERIFIED
Keywords: verifyme
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: