Bug 1008573 - Simplify D3D10 invalid region before we clear the surface. r=Bas, a=sledru